# onnxruntime-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  ONNX_Compilation_Notes.md  README.md
.cargo/: config
.github/actions/auto_gen_bind_pr/: action.yaml
.github/workflows/: gen_bind.yaml  general.yml
lib/: onnxruntime.lib
onnxruntime/: Cargo.toml
onnxruntime-sys/: Cargo.toml  build.rs  wrapper.h
onnxruntime-sys/examples/: c_api_sample.rs
onnxruntime-sys/lib/: onnxruntime.lib
onnxruntime-sys/src/: lib.rs
onnxruntime/examples/: issue22.py  issue22.rs  sample.rs
onnxruntime/src/: download.rs  env.rs  environment.rs  error.rs  lib.rs  memory.rs  metadata.rs  runner.rs  session.rs  tensor.rs
onnxruntime/src/download/: language.rs  vision.rs
onnxruntime/src/download/language/: machine_comprehension.rs
onnxruntime/src/download/vision/: body_face_gesture_analysis.rs  domain_based_image_classification.rs  image_classification.rs  image_manipulation.rs  object_detection_image_segmentation.rs
onnxruntime/src/tensor/: ndarray_tensor.rs  ort_owned_tensor.rs  ort_tensor.rs  type_dynamic_tensor.rs
onnxruntime/tests/: custom_ops.rs  integration_tests.rs  string_type.rs
test-models/tensorflow/: .gitignore  Pipfile  README.md  regex_model.onnx  unique_model.onnx
test-models/tensorflow/src/: regex_model.py  unique_model.py
