[package]
authors = ["Nicolas Bigaouette <nbigaouette@elementai.com>"]
edition = "2018"
name = "onnxruntime-sys"
version = "0.0.2"

description = "Unsafe wrapper around Microsoft's ONNX Runtime"
documentation = "https://docs.rs/onnxruntime-sys"
homepage = "https://github.com/nbigaouette/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nbigaouette/onnxruntime-rs"

categories = ["science"]
keywords = ["neuralnetworks", "onnx", "bindings"]

[dependencies]

[build-dependencies]
bindgen = "0.54"
ureq = "1.3"

[target.'cfg(windows)'.build-dependencies]
zip = "0.5"

[target.'cfg(unix)'.build-dependencies]
flate2 = "1.0"
tar = "0.4"
