[package]
authors = ["Nicolas Bigaouette <nbigaouette@elementai.com>", "Mykyta Makarov <evil.unicorn1@gmail.com>"]
edition = "2018"
name = "onnxruntime-sys"
version = "0.0.14"
build = "build.rs"
include = ["src/**/*", "lib/onnxruntime.dll", "lib/onnxruntime.lib", "Cargo.toml", "build.rs"]

description = "A fork of unsafe wrapper around Microsoft's ONNX Runtime by Nicolas Bigaouette <nbigaouette@elementai.com>."
documentation = "https://docs.rs/onnxruntime-sys"
homepage = "https://github.com/npc-engine/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/npc-engine/onnxruntime-rs"

categories = ["science"]
keywords = ["neuralnetworks", "onnx", "bindings"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.63.0", optional = true }
ureq = "2.1"

# Used on Windows
zip = "0.6.3"

# Used on unix
flate2 = "1.0"
tar = "0.4"

[features]
default = []

# Disable build script, used to prevent issues with docs.rs
disable-sys-build-script = []
# Use bindgen to generate bindings in build.rs
generate-bindings = ["bindgen"]
cuda = []

[package.metadata.docs.rs]
# Disable the build.rs on https://docs.rs since it can cause
# issue there and it's not needed.
features = ["disable-sys-build-script"]
