[package]
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2018"
name = "onnxruntime"
version = "0.0.8"

description = "Wrapper around Microsoft's ONNX Runtime"
documentation = "https://docs.rs/onnxruntime"
homepage = "https://github.com/nbigaouette/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nbigaouette/onnxruntime-rs"

categories = ["science"]
keywords = ["neuralnetworks", "onnx", "bindings"]

[[test]]
name = "integration_tests"
required-features = ["model-fetching"]

[dependencies]
lazy_static = "1.4"
ndarray = "0.13"
onnxruntime-sys = {version = "0.0.8", path = "../onnxruntime-sys"}
thiserror = "1.0"
tracing = "0.1"

# Enabled with 'model-fetching' feature
ureq = {version = "1.5.1", optional = true}

[dev-dependencies]
image = "0.23"
test-env-log = {version = "0.2", default-features = false, features = ["trace"]}
tracing-subscriber = "0.2"
ureq = "1.5.1"

[features]
# Fetch model from ONNX Model Zoo (https://github.com/onnx/models)
model-fetching = ["ureq"]
# Disable build script; used by https://docs.rs
disable-bindgen = ["onnxruntime-sys/disable-bindgen"]

[package.metadata.docs.rs]
features = ["disable-bindgen", "model-fetching"]
